--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -8,4 +8,5 @@ repositories {
 dependencies{
     compile 'com.slickqa:testng:7.0.0-7'
     compile("org.seleniumhq.selenium:selenium-java:4.0.0-alpha-2")
+    compile 'org.hamcrest:java-hamcrest:2.0.0.0'
 }
