--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -9,4 +9,5 @@ dependencies{
     compile 'com.slickqa:testng:7.0.0-7'
     compile("org.seleniumhq.selenium:selenium-java:4.0.0-alpha-2")
     compile 'org.hamcrest:java-hamcrest:2.0.0.0'
+    compile 'com.beust:jcommander:1.78'
 }
