--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -12,6 +12,10 @@ dependencies{
     compile 'com.beust:jcommander:1.78'
     compile 'com.thoughtworks.xstream:xstream:1.4.11.1'
     compile 'com.google.code.gson:gson:2.8.5'
+    compile 'mysql:mysql-connector-java:8.0.17'
+    compile 'ch.qos.logback:logback-classic:1.3.0-alpha4'
+    compile 'org.hibernate.orm:hibernate-core:6.0.0.Alpha2'
+
 
 }
 task testGroups(type:Test){
