--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -14,7 +14,7 @@ dependencies{
     compile 'com.google.code.gson:gson:2.8.5'
     compile 'mysql:mysql-connector-java:8.0.17'
     compile 'ch.qos.logback:logback-classic:1.3.0-alpha4'
-    compile 'org.hibernate.orm:hibernate-core:6.0.0.Alpha2'
+    compile 'org.hibernate:hibernate-core:5.4.4.Final'
 
 
 }
