--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -29,6 +29,10 @@ task testGroups(type:Test){
     if (project.hasProperty("target")){
         systemProperty 'target' , "${target}"
     }
+
+    if (project.hasProperty("verifyUI")){
+        systemProperty 'verifyUI' , "${verifyUI}"
+    }
 }
 
 task testContacts(type:Test){
@@ -43,5 +47,8 @@ task testContacts(type:Test){
         systemProperty 'target' , "${target}"
     }
 
+    if (project.hasProperty("verifyUI")){
+        systemProperty 'verifyUI' , "${verifyUI}"
+    }
 
 }
