--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -9,6 +9,7 @@ dependencies{
     compile 'com.slickqa:testng:7.0.0-7'
     compile("org.seleniumhq.selenium:selenium-java:4.0.0-alpha-2")
     compile 'org.hamcrest:java-hamcrest:2.0.0.0'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.10'
 
 
 
