--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -7,9 +7,13 @@ repositories {
 }
 dependencies{
     compile 'com.slickqa:testng:7.0.0-7'
+    compile 'ch.qos.logback:logback-classic:1.3.0-alpha4'
     compile("org.seleniumhq.selenium:selenium-java:4.0.0-alpha-2")
     compile 'org.hamcrest:java-hamcrest:2.0.0.0'
     implementation 'org.apache.httpcomponents:httpclient:4.5.10'
+    compile 'commons-net:commons-net:3.6'
+    compile 'org.subethamail:subethasmtp:3.1.7'
+    compile 'ru.lanwen.verbalregex:java-verbal-expressions:1.6'
 
 
 
