--- a/rest-sample/build.gradle
+++ b/rest-sample/build.gradle
@@ -10,7 +10,7 @@ dependencies{
     compile 'com.google.code.gson:gson:2.8.5'
     compile 'org.apache.httpcomponents:httpclient:4.5.10'
     compile 'org.apache.httpcomponents:fluent-hc:4.5.10'
-    compile("com.jayway.restassured:rest-assured:2.9.0")
+    compile 'com.jayway.restassured:rest-assured:2.9.0'
 
 }
 
